--- a/app/views/markets/new.html.slim
+++ b/app/views/markets/new.html.slim
@@ -1,5 +1,6 @@
-h1 New market
+h1 = t('markets.new')
 
 == render 'form'
 
-= link_to t('std.back'), markets_path
+.col-md-12
+  = link_to t('std.back'), markets_path
