--- a/app/views/worktime_broadcastings/_worktime_broadcasting.html.slim
+++ b/app/views/worktime_broadcastings/_worktime_broadcasting.html.slim
@@ -7,11 +7,11 @@
         .input-group
           = f.text_field :start, class: "form-control"
           .input-group-btn
-            = f.submit 'Save', class: "btn btn-md btn-success"
+            = f.submit t('std.save'), class: "btn btn-md btn-success"
     td.col-md-3
       = form_for([worktime_broadcasting.market, worktime_broadcasting], remote: true) do |f|
         .input-group
           = f.text_field :stop, class: "form-control"
           .input-group-btn
-            = f.submit 'Save', class: "btn btn-md btn-success"
+            = f.submit t('std.save'), class: "btn btn-md btn-success"
     /td.col-md-1 = link_to '', [worktime_broadcasting.market, worktime_broadcasting], method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove btn btn-md btn-danger pull-right", title: t('std.destroy')
