i18n periods statuses typeofstatuses typeoftasks

--- a/app/views/periods/_form.html.slim
+++ b/app/views/periods/_form.html.slim
@@ -6,10 +6,10 @@
         - @period.errors.full_messages.each do |message|
           li = message
 
-  .field
-    = f.label :value
+  .field.col-md-3
+    = f.label t('periods.thead.value')
     = f.number_field :value
-  .field
-    = f.label :name
+  .field.col-md-3
+    = f.label t('periods.thead.name')
     = f.text_field :name
-  .actions = f.submit
+  .actions.pull-right = f.submit t('std.save'), class: "btn btn-success btn-md"
