--- a/app/views/typeofstatuses/new.html.slim
+++ b/app/views/typeofstatuses/new.html.slim
@@ -1,5 +1,6 @@
-h1 New typeofstatus
+h1 = t('tasks.new_status')
 
 == render 'form'
 
-= link_to t('std.back'), typeofstatuses_path
+.col-md-12
+  = link_to t('std.back'), typeofstatuses_path
