--- a/app/views/periods/new.html.slim
+++ b/app/views/periods/new.html.slim
@@ -1,5 +1,6 @@
-h1 New period
+h1 = t('periods.new')
 
 == render 'form'
 
-= link_to t('std.back'), periods_path
+.col-md-12
+  = link_to t('std.back'), periods_path
