--- a/app/views/statuses/index.html.slim
+++ b/app/views/statuses/index.html.slim
@@ -1,16 +1,16 @@
 .col-md-6
   p.btn-group.pull-right
     - if Status.all.count == 0
-      = link_to 'Generate', {:controller => "statuses", :action => "gen"}, :method => "post", class: "glyphicon glyphicon-forward btn btn-md btn-success pull-left"
+      = link_to t('std.gen'), {:controller => "statuses", :action => "gen"}, :method => "post", class: "glyphicon glyphicon-forward btn btn-md btn-success pull-left"
 
-    = link_to 'New Status', new_status_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+    = link_to t('statuses.add_new'), new_status_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
 
-  h1 Listing statuses
+  h1 = t('statuses.title')
   table.table.table-striped.table-hover.table-condensed.table-bordered
     thead
       tr
         th #
-        th Name
+        th = t('statuses.thead.name')
 
     tbody
       - @statuses.each do |status|
