--- a/app/views/statuses/new.html.slim
+++ b/app/views/statuses/new.html.slim
@@ -1,5 +1,6 @@
-h1 New status
+h1 = t('statuses.new')
 
 == render 'form'
 
-= link_to t('std.back'), statuses_path
+.col-md-12
+  = link_to t('std.back'), statuses_path
