--- a/app/views/typeofstatuses/index.html.slim
+++ b/app/views/typeofstatuses/index.html.slim
@@ -1,18 +1,18 @@
 .col-md-6
   p.btn-group.pull-right
     - if Typeofstatus.all.count == 0
-      = link_to 'Generate', {:controller => "typeofstatuses", :action => "gen"}, :method => "post", class: "glyphicon glyphicon-forward btn btn-md btn-success pull-left"
+      = link_to t('std.gen'), {:controller => "typeofstatuses", :action => "gen"}, :method => "post", class: "glyphicon glyphicon-forward btn btn-md btn-success pull-left"
 
-    = link_to 'New status of tasks', new_typeofstatus_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+    = link_to t('tasks.add_new_status'), new_typeofstatus_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
 
-  h1 Listing typeofstatuses
+  h1 = t('tasks.title_status')
 
   table.table.table-striped.table-hover.table-condensed.table-bordered
     thead
       tr
         th #
-        th Name
-        th Priority
+        th = t('tasks.thead.name')
+        th = t('tasks.thead.priority')
 
     tbody
       - @typeofstatuses.each do |typeofstatus|
