--- a/app/views/typeoftasks/_form.html.slim
+++ b/app/views/typeoftasks/_form.html.slim
@@ -6,10 +6,10 @@
         - @typeoftask.errors.full_messages.each do |message|
           li = message
 
-  .field
-    = f.label :name
+  .field.col-md-3
+    = f.label t('tasks.thead.name')
     = f.text_field :name
-  .field
-    = f.label :priority
+  .field.col-md-4
+    = f.label t('tasks.thead.priority')
     = f.number_field :priority
-  .actions = f.submit
+  .actions.pull-right = f.submit t('std.save'), class:"btn btn-success btn-md"
