--- a/app/views/typeoftasks/edit.html.slim
+++ b/app/views/typeoftasks/edit.html.slim
@@ -1,8 +1,8 @@
-h1 Editing typeoftask
+h1 = t('tasks.edit_type')
 
 == render 'form'
 
-= link_to t('std.show'), @typeoftask
-'|
-= link_to t('std.back'), typeoftasks_path
-
+.col-md-12
+  = link_to t('std.show'), @typeoftask
+  '|
+  = link_to t('std.back'), typeoftasks_path
