--- a/app/views/typeoftasks/new.html.slim
+++ b/app/views/typeoftasks/new.html.slim
@@ -1,5 +1,6 @@
-h1 New typeoftask
+h1 = t('tasks.new_type')
 
 == render 'form'
 
-= link_to t('std.back'), typeoftasks_path
+.col-md-12
+  = link_to t('std.back'), typeoftasks_path
