fix link_to glyphicon to span

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "tasks";
 @import "worktime_broadcastings";
 @import "volsofdays.scss";
+@import "bootstrap-timepicker.css";
 
 //navbar padding
 body { padding-top: 110px; }
