--- a/app/views/plsbgmusics/_form.html.slim
+++ b/app/views/plsbgmusics/_form.html.slim
@@ -11,15 +11,20 @@
     = f.text_field :name
     .actions.pull-right = f.submit t('std.save'), class: "btn btn-success btn-md"
   .col-md-12.padt20
-    .field.col-md-5
-      - devices = {}
-      - devices = @old_order.devices.all if @old_order
-      = f.label t('pls.devices')
-      = collection_select :source, :device_ids, Device.all, :id, :name, {}, {:multiple => true}
-      = f.collection_select :device_ids, devices, :id, :name, {}, { :multiple => true }
     .field.col-md-7
       - files = {}
       - files = @old_order.mediafiles.all if @old_order
-      = f.label t('pls.files')
+      .col-md-12.padb20
+        = f.label t('pls.files')
+        = text_field_tag 'bgMusicPlsFilesSearch', nil
       = collection_select :source, :mediafile_ids, Mediafile.where(:content_id => 1).all, :id, :filename, {}, {:multiple => true}
       = f.collection_select :mediafile_ids, files, :id, :filename, {}, { :multiple => true}
+    .field.col-md-5
+      - devices = {}
+      - devices = @old_order.devices.all if @old_order
+      .col-md-12.padb20
+        = f.label t('pls.devices')
+        = text_field_tag 'bgPlsDevicesSearch', nil
+      = collection_select :source, :device_ids, Device.all, :id, :name, {}, {:multiple => true}
+      = f.collection_select :device_ids, devices, :id, :name, {}, { :multiple => true }
+
