--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -1,4 +1,7 @@
-p.btn-group.pull-right = link_to t('devices.new'), new_device_path, class: "glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+p.btn-group.pull-right
+  = link_to new_device_path, class: "btn btn-md btn-primary pull-right"
+    span.glyphicon.glyphicon-plus
+    = t('devices.new')
 
 table.table.table-striped.table-hover.table-condensed.table-bordered
   thead
