--- a/app/views/plsbgvideos/index.html.slim
+++ b/app/views/plsbgvideos/index.html.slim
@@ -1,6 +1,9 @@
 .col-md-6
   h1.col-md-8.pull-left = t('pls.v_title')
-  = link_to t('pls.new'), new_plsbgvideo_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+  = link_to new_plsbgvideo_path, class:"btn btn-md btn-primary pull-right"
+    span.glyphicon.glyphicon-plus
+    = t('pls.new')
+
   table.table.table-striped.table-hover.table-condensed.table-bordered
     thead
       tr
