datetimepicker inorders + task-status-* in css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 @import "worktime_broadcastings";
 @import "volsofdays.scss";
 @import "bootstrap-timepicker.css";
+@import "bootstrap-datetimepicker.min.css";
 
 //navbar padding
 body { padding-top: 110px; }
