--- a/app/views/devices/_form.html.slim
+++ b/app/views/devices/_form.html.slim
@@ -14,13 +14,13 @@
     = f.text_field :name, class: "col-md-12"
   .field.col-md-1
     = f.label t('devices.thead.ping')
-    = f.number_field :ping, value: 15, min: 1, max: 3600, class: "col-md-12"
+    = f.number_field :ping, value: (@device.ping.present? ? @device.ping : 15), min: 1, max: 3600, class: "col-md-12"
   .field.col-md-1
     = f.label t('devices.thead.tzdate')
-    = f.number_field :tzdate, value: 7, class: "col-md-12"
+    = f.number_field :tzdate, value: (@device.tzdate.present? ? @device.tzdate : 7), class: "col-md-12"
   .field.col-md-1
     = f.label t('devices.thead.sn')
-    = f.text_field :sn, value: '0000', class: "col-md-12"
+    = f.text_field :sn, value: (@device.sn.present? ? @device.sn : '0000'), class: "col-md-12"
   .field
     = f.label t('devices.thead.active')
     = f.check_box :active, checked: true
@@ -29,34 +29,34 @@
   .field.col-md-12.padt20.padb20
     .field.col-md-1
       = f.label :eq0, '31.25', class: "col-md-12"
-      = f.number_field :eq0, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq0, value: (@device.eq0.present? ? @device.eq0 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq1, '62.50', class: "col-md-12"
-      = f.number_field :eq1, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq1, value: (@device.eq1.present? ? @device.eq1 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq2, '125', class: " col-md-12"
-      = f.number_field :eq2, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq2, value: (@device.eq2.present? ? @device.eq2 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq3, '250', class: "col-md-12"
-      = f.number_field :eq3, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq3, value: (@device.eq3.present? ? @device.eq3 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq4, '500', class: "col-md-12"
-      = f.number_field :eq4, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq4, value: (@device.eq4.present? ? @device.eq4 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq5, '1k', class: "col-md-12"
-      = f.number_field :eq5, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq5, value: (@device.eq5.present? ? @device.eq5 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq6, '2k', class: "col-md-12"
-      = f.number_field :eq6, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq6, value: (@device.eq6.present? ? @device.eq6 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq7, '4k', class: "col-md-12"
-      = f.number_field :eq7, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq7, value: (@device.eq7.present? ? @device.eq7 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq8, '8k', class: "col-md-12"
-      = f.number_field :eq8, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq8, value: (@device.eq8.present? ? @device.eq8 : 0), min: -12, max: 12, class: "col-md-12"
     .field.col-md-1
       = f.label :eq9, '16k', class: "col-md-12"
-      = f.number_field :eq9, value: 0, min: -12, max: 12, class: "col-md-12"
+      = f.number_field :eq9, value: (@device.eq9.present? ? @device.eq9 : 0), min: -12, max: 12, class: "col-md-12"
 
   .field.col-md-12
     = f.label t('devices.thead.comment')
