--- a/app/views/devices/show.html.slim
+++ b/app/views/devices/show.html.slim
@@ -15,6 +15,7 @@
     = @device.market.name
     strong = "-> #{t('devices.device')}:"
     = "#{@device.id} - #{@device.name}"
+    = link_to '', {:controller => "tasks", :action => "index", :device_id => @device.id }, :method => "get", class: "glyphicon glyphicon-list btn btn-md btn-default pull-right", title: t('nav.tasks')
 
   h2 = t('devices.volumes')
 
