add messages in navigate panel

--- a/app/views/layouts/_application_nav.html.slim
+++ b/app/views/layouts/_application_nav.html.slim
@@ -13,6 +13,7 @@
           li = link_to t('nav.contents'), contents_path
           li = link_to t('nav.devices'), devices_path
           li = link_to t('nav.tasks'), tasks_path
+          li = link_to t('nav.messages'), messages_path
           /li = link_to t('nav.'), suborders_path
           li = link_to t('nav.bgvideos'), plsbgvideos_path
           li = link_to t('nav.bgmusics'), plsbgmusics_path
