--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -1,25 +1,32 @@
-h1 Listing messages
+= paginate @messages
 
-table
+table.table.table-striped.table-hover.table-condensed.table-bordered
   thead
     tr
-      th Device
+      th = t('devices.thead.id')
+      th = t('devices.thead.id')
+      th = t('devices.thead.name')
       th Runtime
       th Text
+      th Created_at
       th
-      th
-      th
+      /th
+      /th
 
   tbody
     - @messages.each do |message|
       tr
-        td = message.device
+        td = message.id
+        td = message.device.id
+        td = message.device.name
         td = message.runtime
         td = message.text
+        td = message.created_at
         td = link_to 'Show', message
-        td = link_to 'Edit', edit_message_path(message)
-        td = link_to 'Destroy', message, data: { confirm: 'Are you sure?' }, method: :delete
+        /td = link_to 'Edit', edit_message_path(message)
+        /td = link_to 'Destroy', message, data: { confirm: 'Are you sure?' }, method: :delete
 
-br
+/br
 
-= link_to 'New Message', new_message_path
+/= link_to 'New Message', new_message_path
+= paginate @messages
