--- a/app/views/volumes/_volume.html.slim
+++ b/app/views/volumes/_volume.html.slim
@@ -1,12 +1,22 @@
-- if volume.value.present?
-      tr
-        td.col-md-2 = volume.description
-        td.col-md-1 = volume.name
-        / td = volume.value
-        td.col-md-1
-          = form_for([volume.device, volume], remote: true) do |f|
-            .input-group
-              = f.number_field :value, min: 0, max:100, class: "form-control"
-              .input-group-btn
-                = f.submit t('std.save'), class: "btn btn-md btn-success"
-        td.col-md-1 = link_to '', [volume.device, volume], method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove btn btn-sm btn-danger pull-right", title: t('std.destroy')
+= form_for @device, remote:true do |device_form|
+  .col-md-12.padb20
+    - @device.volumes.each do |volumes|
+      = device_form.fields_for volumes, index: volumes.id do |volumes_form|
+        .field.col-md-2
+          = device_form.label volumes.description
+          = volumes_form.number_field :value, min: 0, max:100, class: "form-control" if volumes.id.present?
+    .col-md-12.padt20
+      = device_form.submit t('std.save'), class: "btn btn-md btn-success pull-left col-md-12"
+
+/- if volume.value.present?
+/      tr
+/        td.col-md-2 = volume.description
+/        td.col-md-1 = volume.name
+/        / td = volume.value
+/        td.col-md-1
+/          = form_for([volume.device, volume], remote: true) do |f|
+/            .input-group
+/              = f.number_field :value, min: 0, max:100, class: "form-control"
+/              .input-group-btn
+/                = f.submit t('std.save'), class: "btn btn-md btn-success"
+/        td.col-md-1 = link_to '', [volume.device, volume], method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove btn btn-sm btn-danger pull-right", title: t('std.destroy')
